Estrutura do Html e Estilização

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,100 @@ menu a:visited {
 menu a:hover {
     background-color: #40424a;
 }
+
+section {
+    width: 100%;
+    position: relative;
+}
+
+.banner {
+    width: 100%;
+}
+
+.banner img {
+    width: 100%;
+}
+
+#inicio h1 {
+    width: 400px;
+    position: absolute;
+    top: 40%;
+    left: 100px;
+    color: #fafafa;
+    text-transform: uppercase;
+    font-size: 64px;
+    line-height: 45px;
+}
+
+#inicio h1 span {
+    color: #e7a10d;
+    font-size: 70px;
+    margin-left: 20px;
+}
+
+#inicio .lama {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 170px;
+    display: flex;
+    align-items: flex-end;
+}
+
+#inicio .lama img {
+    width: 100%;
+}
+
+#galeria {
+    background-color: #222222;
+}
+
+.galeria {
+    width: 1280px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    gap: 20px;
+}
+
+.galeria h2 {
+    width: 100%;
+    font-size: 42px;
+    text-transform: uppercase;
+    color: #fafafa;
+}
+
+.galeria h2 span {
+    color: #e7a10d;
+    position: relative;
+    top: 0px;
+}
+
+.thumbs {
+    width: 630px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.thumb {
+    width: 200px;
+    height: 100px;
+}
+
+.thumb img {
+    width: 100%;
+    height: 100px;
+}
+
+.large {
+    width: 630px;
+}
+
+.img-large {
+    width: 100%;
+}
+
+.img-large img {
+    width: 100%;
+}
